Update Ramadan message with year information

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             { text: "> [SYSTEM_OVERRIDE] --force", class: "code-line" },
             { text: "> executing ramadhan_protocol.sh ... <span style='color: #0f0; text-shadow: 0 0 5px #0f0;'>[OK]</span>", class: "code-line" },
             { text: "> decrypting message ...", class: "code-line" },
-            { text: "Selamat Menjalankan Ibadah Puasa Ramadhan", class: "highlight-box" },
+            { text: "Selamat Menjalankan Ibadah Puasa Ramadhan 1447-H/2026-M", class: "highlight-box" },
             { text: "> function getBerkah() { return 'MAX_VALUE'; }", class: "code-line" },
             { text: "> status: <span style='animation: blink 1s linear infinite;'>ONLINE</span>", class: "code-line" }
         ];
